소스트리 테스트

--- a/css/20210517_10_mainstyle.css
+++ b/css/20210517_10_mainstyle.css
@@ -5,6 +5,7 @@
         
         header{
             display: flex;
+            /* 가운데를 기점으로 떨어뜨리기 */
             justify-content: space-between;
             background-color: var(--dark-color);
         }
